--- a/VisualGGPK2/ErrorWindow.xaml
+++ b/VisualGGPK2/ErrorWindow.xaml
@@ -1,18 +1,79 @@
-﻿<Window x:Class="VisualGGPK2.ErrorWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		Title="ErrorWindow" Width="560" Height="500" WindowStartupLocation="CenterScreen" Closing="OnClosing">
+﻿<Window
+    x:Class="VisualGGPK2.ErrorWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    Title="ErrorWindow"
+    Width="560"
+    Height="500"
+    Closing="OnClosing"
+    WindowStartupLocation="CenterScreen"
+    WindowStyle="None">
     <Grid>
-        <TextBox x:Name="ErrorBox" Text="Loading Exception . . ." Padding="2" IsReadOnly="True" TextWrapping="Wrap" AcceptsReturn="True" Margin="0,0,0,31" ScrollViewer.CanContentScroll="True" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto"/>
-		<TextBlock HorizontalAlignment="Right"
-				   Text="Copyright © 2020-2023 aianlinb"
-				   TextWrapping="Wrap"
-				   FontSize="14"
-				   VerticalAlignment="Bottom"
-				   Margin="0,0,10,7"/>
-        <Button x:Name="ButtonCopy" Content="CopyText" IsEnabled="False" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="70" Margin="10,0,0,6" Click="OnCopyClick"/>
-        <Button x:Name="ButtonGitHub" Content="OpenGitHub" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="85" Margin="90,0,0,6" Click="OnGitHubClick"/>
-        <Button x:Name="ButtonResume" Content="Resume" IsEnabled="False" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="60" Margin="190,0,0,6" Click="OnResumeClick"/>
-        <Button x:Name="ButtonStop" Content="Stop" IsEnabled="False" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="40" Margin="260,0,0,6" Click="OnStopClick"/>
+        <ui:TitleBar
+            Grid.Column="3"
+            Height="40"
+            Background="WhiteSmoke"
+            BorderBrush="Black"
+            Foreground="Black" />
+        <TextBox
+            x:Name="ErrorBox"
+            Margin="0,0,0,35"
+            Padding="2"
+            AcceptsReturn="True"
+            HorizontalScrollBarVisibility="Auto"
+            IsReadOnly="True"
+            ScrollViewer.CanContentScroll="True"
+            Text="Loading Exception . . ."
+            TextWrapping="Wrap"
+            VerticalScrollBarVisibility="Auto" />
+        <StackPanel
+            Height="460"
+            Margin="0,40,0,0"
+            Orientation="Horizontal">
+            <Button
+                x:Name="ButtonCopy"
+                Width="100"
+                Height="30"
+                Margin="30,0,0,2"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Bottom"
+                Click="OnCopyClick"
+                Content="Copy"
+                IsEnabled="False"
+                ToolTipService.ToolTip="copy" />
+            <Button
+                x:Name="ButtonGitHub"
+                Width="100"
+                Height="30"
+                Margin="30,0,0,2"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Bottom"
+                Click="OnGitHubClick"
+                Content="GitHub"
+                ToolTipService.ToolTip="open GitHub webpage" />
+            <Button
+                x:Name="ButtonResume"
+                Width="100"
+                Height="30"
+                Margin="30,0,0,2"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Bottom"
+                Click="OnResumeClick"
+                Content="Resume"
+                IsEnabled="False"
+                ToolTipService.ToolTip="resume" />
+            <Button
+                x:Name="ButtonStop"
+                Width="100"
+                Height="30"
+                Margin="30,0,0,2"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Bottom"
+                Click="OnStopClick"
+                Content="Stop"
+                IsEnabled="False"
+                ToolTipService.ToolTip="stop" />
+        </StackPanel>
     </Grid>
 </Window>
