--- a/VisualGGPK2/App.xaml
+++ b/VisualGGPK2/App.xaml
@@ -8,7 +8,10 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <!--<ui:ThemesDictionary Theme="Dark" />-->
                 <ui:ThemesDictionary Theme="Light" />
+                <!--<ui:ThemesDictionary Theme="Unknown" />-->
+                <!--<ui:ThemesDictionary Theme="vLight" />-->
                 <ui:ControlsDictionary />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
