--- a/VisualGGPK2/MainWindow.xaml
+++ b/VisualGGPK2/MainWindow.xaml
@@ -118,7 +118,7 @@
 
             <ui:TextBox
                 x:Name="FilterBox"
-                Height="35"
+                Height="30"
                 Margin="2,2,0,2"
                 Padding="0,0,20,0"
                 HorizontalContentAlignment="Right"
@@ -135,6 +135,7 @@
                 Width="20"
                 Height="20"
                 Margin="8,0,0,0"
+                Padding="0,0,0,0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Center"
                 HorizontalContentAlignment="Center"
@@ -309,6 +310,19 @@
             <GridSplitter Grid.Column="1" Width="5" />
 
             <StackPanel Grid.Column="0" Orientation="Vertical">
+                <ui:Button
+                    x:Name="AllowGameOpen"
+                    Width="35"
+                    Height="30"
+                    Margin="0,35,0,0"
+                    Padding="0,0,0,0"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    HorizontalContentAlignment="Center"
+                    Click="AllowGameOpen_Click"
+                    FontSize="20"
+                    Icon="{ui:SymbolIcon DesktopCheckmark24}"
+                    ToolTipService.ToolTip="allow game to be opened" />
                 <ui:TextBlock
                     Grid.Column="0"
                     Margin="0,150,0,0"
@@ -321,8 +335,8 @@
                 <ui:Button
                     x:Name="Official"
                     Grid.Column="0"
-                    Width="40"
-                    Height="40"
+                    Width="35"
+                    Height="30"
                     Margin="0,10,0,0"
                     Padding="0,0,0,0"
                     HorizontalAlignment="Center"
@@ -334,8 +348,8 @@
                 <ui:Button
                     x:Name="Steam"
                     Grid.Column="0"
-                    Width="40"
-                    Height="40"
+                    Width="35"
+                    Height="30"
                     Margin="0,10,0,0"
                     Padding="0,0,0,0"
                     HorizontalAlignment="Center"
@@ -347,8 +361,8 @@
                 <ui:Button
                     x:Name="Garena"
                     Grid.Column="0"
-                    Width="40"
-                    Height="40"
+                    Width="35"
+                    Height="30"
                     Margin="0,10,0,0"
                     Padding="0,0,0,0"
                     HorizontalAlignment="Center"
@@ -359,8 +373,8 @@
                 <ui:Button
                     x:Name="Tencent"
                     Grid.Column="0"
-                    Width="40"
-                    Height="40"
+                    Width="35"
+                    Height="30"
                     Margin="0,10,0,0"
                     Padding="0,0,0,0"
                     HorizontalAlignment="Center"
@@ -371,8 +385,8 @@
                 <ui:Button
                     x:Name="Epic"
                     Grid.Column="0"
-                    Width="40"
-                    Height="40"
+                    Width="35"
+                    Height="30"
                     Margin="0,10,0,0"
                     Padding="0,0,0,0"
                     HorizontalAlignment="Center"
@@ -380,19 +394,16 @@
                     Content="E"
                     FontSize="20"
                     ToolTipService.ToolTip="open Epic" />
-                <ui:Button
-                    x:Name="AllowGameOpen"
+                <ui:Image
                     Width="35"
                     Height="30"
-                    Margin="0,120,0,0"
-                    Padding="0,0,0,0"
+                    Margin="0,140,0,0"
                     HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    HorizontalContentAlignment="Center"
-                    Click="AllowGameOpen_Click"
-                    FontSize="20"
-                    Icon="{ui:SymbolIcon DesktopCheckmark24}"
-                    ToolTipService.ToolTip="allow game to be opened" />
+                    VerticalAlignment="Bottom"
+                    BorderBrush="#33000000"
+                    CornerRadius="4"
+                    Source="/silver_cube.png"
+                    ToolTipService.ToolTip="VisualGGPK2 UI" />
             </StackPanel>
 
             <ui:AutoSuggestBox
